cc_q2/par.output
Terminals which are not used

   COMMA


Grammar

    0 $accept: Prog $end

    1 Prog: StmtList

    2 StmtList: Stmt StmtList
    3         | /* empty */

    4 Stmt: Decl
    5     | Asgn
    6     | IfStmt
    7     | WhlStmt
    8     | PrntStmt
    9     | Blk

   10 Blk: LC StmtList RC

   11 Decl: Typ ID SEMI

   12 Typ: INT
   13    | FLOAT

   14 Asgn: ID ASGN Expr SEMI

   15 PrntStmt: PRINT LP ID RP SEMI

   16 IfStmt: IF LP Expr RP Blk
   17       | IF LP Expr RP Blk ELSE Blk

   18 WhlStmt: WHILE LP Expr RP Blk

   19 Expr: Expr OR Expr
   20     | Expr AND Expr
   21     | Expr EQ Expr
   22     | Expr NEQ Expr
   23     | Expr LT Expr
   24     | Expr GT Expr
   25     | Expr LEQ Expr
   26     | Expr GEQ Expr
   27     | Expr PLUS Expr
   28     | Expr MINUS Expr
   29     | Expr MUL Expr
   30     | Expr DIV Expr
   31     | Expr MOD Expr
   32     | NOT LP Expr RP
   33     | LP Expr RP
   34     | ID
   35     | ICON
   36     | FCON


Terminals, with rules where they appear

$end (0) 0
error (256)
INT (258) 12
FLOAT (259) 13
IF (260) 16 17
ELSE (261) 17
WHILE (262) 18
PRINT (263) 15
ID (264) 11 14 15 34
ICON (265) 35
FCON (266) 36
PLUS (267) 27
MINUS (268) 28
MUL (269) 29
DIV (270) 30
MOD (271) 31
EQ (272) 21
NEQ (273) 22
LT (274) 23
GT (275) 24
LEQ (276) 25
GEQ (277) 26
AND (278) 20
OR (279) 19
NOT (280) 32
ASGN (281) 14
SEMI (282) 11 14 15
COMMA (283)
LP (284) 15 16 17 18 32 33
RP (285) 15 16 17 18 32 33
LC (286) 10
RC (287) 10


Nonterminals, with rules where they appear

$accept (33)
    on left: 0
Prog (34)
    on left: 1, on right: 0
StmtList (35)
    on left: 2 3, on right: 1 2 10
Stmt (36)
    on left: 4 5 6 7 8 9, on right: 2
Blk (37)
    on left: 10, on right: 9 16 17 18
Decl (38)
    on left: 11, on right: 4
Typ (39)
    on left: 12 13, on right: 11
Asgn (40)
    on left: 14, on right: 5
PrntStmt (41)
    on left: 15, on right: 8
IfStmt (42)
    on left: 16 17, on right: 6
WhlStmt (43)
    on left: 18, on right: 7
Expr (44)
    on left: 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36,
    on right: 14 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32
    33


state 0

    0 $accept: . Prog $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    IF     shift, and go to state 3
    WHILE  shift, and go to state 4
    PRINT  shift, and go to state 5
    ID     shift, and go to state 6
    LC     shift, and go to state 7

    $default  reduce using rule 3 (StmtList)

    Prog      go to state 8
    StmtList  go to state 9
    Stmt      go to state 10
    Blk       go to state 11
    Decl      go to state 12
    Typ       go to state 13
    Asgn      go to state 14
    PrntStmt  go to state 15
    IfStmt    go to state 16
    WhlStmt   go to state 17


state 1

   12 Typ: INT .

    $default  reduce using rule 12 (Typ)


state 2

   13 Typ: FLOAT .

    $default  reduce using rule 13 (Typ)


state 3

   16 IfStmt: IF . LP Expr RP Blk
   17       | IF . LP Expr RP Blk ELSE Blk

    LP  shift, and go to state 18


state 4

   18 WhlStmt: WHILE . LP Expr RP Blk

    LP  shift, and go to state 19


state 5

   15 PrntStmt: PRINT . LP ID RP SEMI

    LP  shift, and go to state 20


state 6

   14 Asgn: ID . ASGN Expr SEMI

    ASGN  shift, and go to state 21


state 7

   10 Blk: LC . StmtList RC

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    IF     shift, and go to state 3
    WHILE  shift, and go to state 4
    PRINT  shift, and go to state 5
    ID     shift, and go to state 6
    LC     shift, and go to state 7

    $default  reduce using rule 3 (StmtList)

    StmtList  go to state 22
    Stmt      go to state 10
    Blk       go to state 11
    Decl      go to state 12
    Typ       go to state 13
    Asgn      go to state 14
    PrntStmt  go to state 15
    IfStmt    go to state 16
    WhlStmt   go to state 17


state 8

    0 $accept: Prog . $end

    $end  shift, and go to state 23


state 9

    1 Prog: StmtList .

    $default  reduce using rule 1 (Prog)


state 10

    2 StmtList: Stmt . StmtList

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    IF     shift, and go to state 3
    WHILE  shift, and go to state 4
    PRINT  shift, and go to state 5
    ID     shift, and go to state 6
    LC     shift, and go to state 7

    $default  reduce using rule 3 (StmtList)

    StmtList  go to state 24
    Stmt      go to state 10
    Blk       go to state 11
    Decl      go to state 12
    Typ       go to state 13
    Asgn      go to state 14
    PrntStmt  go to state 15
    IfStmt    go to state 16
    WhlStmt   go to state 17


state 11

    9 Stmt: Blk .

    $default  reduce using rule 9 (Stmt)


state 12

    4 Stmt: Decl .

    $default  reduce using rule 4 (Stmt)


state 13

   11 Decl: Typ . ID SEMI

    ID  shift, and go to state 25


state 14

    5 Stmt: Asgn .

    $default  reduce using rule 5 (Stmt)


state 15

    8 Stmt: PrntStmt .

    $default  reduce using rule 8 (Stmt)


state 16

    6 Stmt: IfStmt .

    $default  reduce using rule 6 (Stmt)


state 17

    7 Stmt: WhlStmt .

    $default  reduce using rule 7 (Stmt)


state 18

   16 IfStmt: IF LP . Expr RP Blk
   17       | IF LP . Expr RP Blk ELSE Blk

    ID    shift, and go to state 26
    ICON  shift, and go to state 27
    FCON  shift, and go to state 28
    NOT   shift, and go to state 29
    LP    shift, and go to state 30

    Expr  go to state 31


state 19

   18 WhlStmt: WHILE LP . Expr RP Blk

    ID    shift, and go to state 26
    ICON  shift, and go to state 27
    FCON  shift, and go to state 28
    NOT   shift, and go to state 29
    LP    shift, and go to state 30

    Expr  go to state 32


state 20

   15 PrntStmt: PRINT LP . ID RP SEMI

    ID  shift, and go to state 33


state 21

   14 Asgn: ID ASGN . Expr SEMI

    ID    shift, and go to state 26
    ICON  shift, and go to state 27
    FCON  shift, and go to state 28
    NOT   shift, and go to state 29
    LP    shift, and go to state 30

    Expr  go to state 34


state 22

   10 Blk: LC StmtList . RC

    RC  shift, and go to state 35


state 23

    0 $accept: Prog $end .

    $default  accept


state 24

    2 StmtList: Stmt StmtList .

    $default  reduce using rule 2 (StmtList)


state 25

   11 Decl: Typ ID . SEMI

    SEMI  shift, and go to state 36


state 26

   34 Expr: ID .

    $default  reduce using rule 34 (Expr)


state 27

   35 Expr: ICON .

    $default  reduce using rule 35 (Expr)


state 28

   36 Expr: FCON .

    $default  reduce using rule 36 (Expr)


state 29

   32 Expr: NOT . LP Expr RP

    LP  shift, and go to state 37


state 30

   33 Expr: LP . Expr RP

    ID    shift, and go to state 26
    ICON  shift, and go to state 27
    FCON  shift, and go to state 28
    NOT   shift, and go to state 29
    LP    shift, and go to state 30

    Expr  go to state 38


state 31

   16 IfStmt: IF LP Expr . RP Blk
   17       | IF LP Expr . RP Blk ELSE Blk
   19 Expr: Expr . OR Expr
   20     | Expr . AND Expr
   21     | Expr . EQ Expr
   22     | Expr . NEQ Expr
   23     | Expr . LT Expr
   24     | Expr . GT Expr
   25     | Expr . LEQ Expr
   26     | Expr . GEQ Expr
   27     | Expr . PLUS Expr
   28     | Expr . MINUS Expr
   29     | Expr . MUL Expr
   30     | Expr . DIV Expr
   31     | Expr . MOD Expr

    PLUS   shift, and go to state 39
    MINUS  shift, and go to state 40
    MUL    shift, and go to state 41
    DIV    shift, and go to state 42
    MOD    shift, and go to state 43
    EQ     shift, and go to state 44
    NEQ    shift, and go to state 45
    LT     shift, and go to state 46
    GT     shift, and go to state 47
    LEQ    shift, and go to state 48
    GEQ    shift, and go to state 49
    AND    shift, and go to state 50
    OR     shift, and go to state 51
    RP     shift, and go to state 52


state 32

   18 WhlStmt: WHILE LP Expr . RP Blk
   19 Expr: Expr . OR Expr
   20     | Expr . AND Expr
   21     | Expr . EQ Expr
   22     | Expr . NEQ Expr
   23     | Expr . LT Expr
   24     | Expr . GT Expr
   25     | Expr . LEQ Expr
   26     | Expr . GEQ Expr
   27     | Expr . PLUS Expr
   28     | Expr . MINUS Expr
   29     | Expr . MUL Expr
   30     | Expr . DIV Expr
   31     | Expr . MOD Expr

    PLUS   shift, and go to state 39
    MINUS  shift, and go to state 40
    MUL    shift, and go to state 41
    DIV    shift, and go to state 42
    MOD    shift, and go to state 43
    EQ     shift, and go to state 44
    NEQ    shift, and go to state 45
    LT     shift, and go to state 46
    GT     shift, and go to state 47
    LEQ    shift, and go to state 48
    GEQ    shift, and go to state 49
    AND    shift, and go to state 50
    OR     shift, and go to state 51
    RP     shift, and go to state 53


state 33

   15 PrntStmt: PRINT LP ID . RP SEMI

    RP  shift, and go to state 54


state 34

   14 Asgn: ID ASGN Expr . SEMI
   19 Expr: Expr . OR Expr
   20     | Expr . AND Expr
   21     | Expr . EQ Expr
   22     | Expr . NEQ Expr
   23     | Expr . LT Expr
   24     | Expr . GT Expr
   25     | Expr . LEQ Expr
   26     | Expr . GEQ Expr
   27     | Expr . PLUS Expr
   28     | Expr . MINUS Expr
   29     | Expr . MUL Expr
   30     | Expr . DIV Expr
   31     | Expr . MOD Expr

    PLUS   shift, and go to state 39
    MINUS  shift, and go to state 40
    MUL    shift, and go to state 41
    DIV    shift, and go to state 42
    MOD    shift, and go to state 43
    EQ     shift, and go to state 44
    NEQ    shift, and go to state 45
    LT     shift, and go to state 46
    GT     shift, and go to state 47
    LEQ    shift, and go to state 48
    GEQ    shift, and go to state 49
    AND    shift, and go to state 50
    OR     shift, and go to state 51
    SEMI   shift, and go to state 55


state 35

   10 Blk: LC StmtList RC .

    $default  reduce using rule 10 (Blk)


state 36

   11 Decl: Typ ID SEMI .

    $default  reduce using rule 11 (Decl)


state 37

   32 Expr: NOT LP . Expr RP

    ID    shift, and go to state 26
    ICON  shift, and go to state 27
    FCON  shift, and go to state 28
    NOT   shift, and go to state 29
    LP    shift, and go to state 30

    Expr  go to state 56


state 38

   19 Expr: Expr . OR Expr
   20     | Expr . AND Expr
   21     | Expr . EQ Expr
   22     | Expr . NEQ Expr
   23     | Expr . LT Expr
   24     | Expr . GT Expr
   25     | Expr . LEQ Expr
   26     | Expr . GEQ Expr
   27     | Expr . PLUS Expr
   28     | Expr . MINUS Expr
   29     | Expr . MUL Expr
   30     | Expr . DIV Expr
   31     | Expr . MOD Expr
   33     | LP Expr . RP

    PLUS   shift, and go to state 39
    MINUS  shift, and go to state 40
    MUL    shift, and go to state 41
    DIV    shift, and go to state 42
    MOD    shift, and go to state 43
    EQ     shift, and go to state 44
    NEQ    shift, and go to state 45
    LT     shift, and go to state 46
    GT     shift, and go to state 47
    LEQ    shift, and go to state 48
    GEQ    shift, and go to state 49
    AND    shift, and go to state 50
    OR     shift, and go to state 51
    RP     shift, and go to state 57


state 39

   27 Expr: Expr PLUS . Expr

    ID    shift, and go to state 26
    ICON  shift, and go to state 27
    FCON  shift, and go to state 28
    NOT   shift, and go to state 29
    LP    shift, and go to state 30

    Expr  go to state 58


state 40

   28 Expr: Expr MINUS . Expr

    ID    shift, and go to state 26
    ICON  shift, and go to state 27
    FCON  shift, and go to state 28
    NOT   shift, and go to state 29
    LP    shift, and go to state 30

    Expr  go to state 59


state 41

   29 Expr: Expr MUL . Expr

    ID    shift, and go to state 26
    ICON  shift, and go to state 27
    FCON  shift, and go to state 28
    NOT   shift, and go to state 29
    LP    shift, and go to state 30

    Expr  go to state 60


state 42

   30 Expr: Expr DIV . Expr

    ID    shift, and go to state 26
    ICON  shift, and go to state 27
    FCON  shift, and go to state 28
    NOT   shift, and go to state 29
    LP    shift, and go to state 30

    Expr  go to state 61


state 43

   31 Expr: Expr MOD . Expr

    ID    shift, and go to state 26
    ICON  shift, and go to state 27
    FCON  shift, and go to state 28
    NOT   shift, and go to state 29
    LP    shift, and go to state 30

    Expr  go to state 62


state 44

   21 Expr: Expr EQ . Expr

    ID    shift, and go to state 26
    ICON  shift, and go to state 27
    FCON  shift, and go to state 28
    NOT   shift, and go to state 29
    LP    shift, and go to state 30

    Expr  go to state 63


state 45

   22 Expr: Expr NEQ . Expr

    ID    shift, and go to state 26
    ICON  shift, and go to state 27
    FCON  shift, and go to state 28
    NOT   shift, and go to state 29
    LP    shift, and go to state 30

    Expr  go to state 64


state 46

   23 Expr: Expr LT . Expr

    ID    shift, and go to state 26
    ICON  shift, and go to state 27
    FCON  shift, and go to state 28
    NOT   shift, and go to state 29
    LP    shift, and go to state 30

    Expr  go to state 65


state 47

   24 Expr: Expr GT . Expr

    ID    shift, and go to state 26
    ICON  shift, and go to state 27
    FCON  shift, and go to state 28
    NOT   shift, and go to state 29
    LP    shift, and go to state 30

    Expr  go to state 66


state 48

   25 Expr: Expr LEQ . Expr

    ID    shift, and go to state 26
    ICON  shift, and go to state 27
    FCON  shift, and go to state 28
    NOT   shift, and go to state 29
    LP    shift, and go to state 30

    Expr  go to state 67


state 49

   26 Expr: Expr GEQ . Expr

    ID    shift, and go to state 26
    ICON  shift, and go to state 27
    FCON  shift, and go to state 28
    NOT   shift, and go to state 29
    LP    shift, and go to state 30

    Expr  go to state 68


state 50

   20 Expr: Expr AND . Expr

    ID    shift, and go to state 26
    ICON  shift, and go to state 27
    FCON  shift, and go to state 28
    NOT   shift, and go to state 29
    LP    shift, and go to state 30

    Expr  go to state 69


state 51

   19 Expr: Expr OR . Expr

    ID    shift, and go to state 26
    ICON  shift, and go to state 27
    FCON  shift, and go to state 28
    NOT   shift, and go to state 29
    LP    shift, and go to state 30

    Expr  go to state 70


state 52

   16 IfStmt: IF LP Expr RP . Blk
   17       | IF LP Expr RP . Blk ELSE Blk

    LC  shift, and go to state 7

    Blk  go to state 71


state 53

   18 WhlStmt: WHILE LP Expr RP . Blk

    LC  shift, and go to state 7

    Blk  go to state 72


state 54

   15 PrntStmt: PRINT LP ID RP . SEMI

    SEMI  shift, and go to state 73


state 55

   14 Asgn: ID ASGN Expr SEMI .

    $default  reduce using rule 14 (Asgn)


state 56

   19 Expr: Expr . OR Expr
   20     | Expr . AND Expr
   21     | Expr . EQ Expr
   22     | Expr . NEQ Expr
   23     | Expr . LT Expr
   24     | Expr . GT Expr
   25     | Expr . LEQ Expr
   26     | Expr . GEQ Expr
   27     | Expr . PLUS Expr
   28     | Expr . MINUS Expr
   29     | Expr . MUL Expr
   30     | Expr . DIV Expr
   31     | Expr . MOD Expr
   32     | NOT LP Expr . RP

    PLUS   shift, and go to state 39
    MINUS  shift, and go to state 40
    MUL    shift, and go to state 41
    DIV    shift, and go to state 42
    MOD    shift, and go to state 43
    EQ     shift, and go to state 44
    NEQ    shift, and go to state 45
    LT     shift, and go to state 46
    GT     shift, and go to state 47
    LEQ    shift, and go to state 48
    GEQ    shift, and go to state 49
    AND    shift, and go to state 50
    OR     shift, and go to state 51
    RP     shift, and go to state 74


state 57

   33 Expr: LP Expr RP .

    $default  reduce using rule 33 (Expr)


state 58

   19 Expr: Expr . OR Expr
   20     | Expr . AND Expr
   21     | Expr . EQ Expr
   22     | Expr . NEQ Expr
   23     | Expr . LT Expr
   24     | Expr . GT Expr
   25     | Expr . LEQ Expr
   26     | Expr . GEQ Expr
   27     | Expr . PLUS Expr
   27     | Expr PLUS Expr .
   28     | Expr . MINUS Expr
   29     | Expr . MUL Expr
   30     | Expr . DIV Expr
   31     | Expr . MOD Expr

    MUL  shift, and go to state 41
    DIV  shift, and go to state 42
    MOD  shift, and go to state 43

    $default  reduce using rule 27 (Expr)


state 59

   19 Expr: Expr . OR Expr
   20     | Expr . AND Expr
   21     | Expr . EQ Expr
   22     | Expr . NEQ Expr
   23     | Expr . LT Expr
   24     | Expr . GT Expr
   25     | Expr . LEQ Expr
   26     | Expr . GEQ Expr
   27     | Expr . PLUS Expr
   28     | Expr . MINUS Expr
   28     | Expr MINUS Expr .
   29     | Expr . MUL Expr
   30     | Expr . DIV Expr
   31     | Expr . MOD Expr

    MUL  shift, and go to state 41
    DIV  shift, and go to state 42
    MOD  shift, and go to state 43

    $default  reduce using rule 28 (Expr)


state 60

   19 Expr: Expr . OR Expr
   20     | Expr . AND Expr
   21     | Expr . EQ Expr
   22     | Expr . NEQ Expr
   23     | Expr . LT Expr
   24     | Expr . GT Expr
   25     | Expr . LEQ Expr
   26     | Expr . GEQ Expr
   27     | Expr . PLUS Expr
   28     | Expr . MINUS Expr
   29     | Expr . MUL Expr
   29     | Expr MUL Expr .
   30     | Expr . DIV Expr
   31     | Expr . MOD Expr

    $default  reduce using rule 29 (Expr)


state 61

   19 Expr: Expr . OR Expr
   20     | Expr . AND Expr
   21     | Expr . EQ Expr
   22     | Expr . NEQ Expr
   23     | Expr . LT Expr
   24     | Expr . GT Expr
   25     | Expr . LEQ Expr
   26     | Expr . GEQ Expr
   27     | Expr . PLUS Expr
   28     | Expr . MINUS Expr
   29     | Expr . MUL Expr
   30     | Expr . DIV Expr
   30     | Expr DIV Expr .
   31     | Expr . MOD Expr

    $default  reduce using rule 30 (Expr)


state 62

   19 Expr: Expr . OR Expr
   20     | Expr . AND Expr
   21     | Expr . EQ Expr
   22     | Expr . NEQ Expr
   23     | Expr . LT Expr
   24     | Expr . GT Expr
   25     | Expr . LEQ Expr
   26     | Expr . GEQ Expr
   27     | Expr . PLUS Expr
   28     | Expr . MINUS Expr
   29     | Expr . MUL Expr
   30     | Expr . DIV Expr
   31     | Expr . MOD Expr
   31     | Expr MOD Expr .

    $default  reduce using rule 31 (Expr)


state 63

   19 Expr: Expr . OR Expr
   20     | Expr . AND Expr
   21     | Expr . EQ Expr
   21     | Expr EQ Expr .
   22     | Expr . NEQ Expr
   23     | Expr . LT Expr
   24     | Expr . GT Expr
   25     | Expr . LEQ Expr
   26     | Expr . GEQ Expr
   27     | Expr . PLUS Expr
   28     | Expr . MINUS Expr
   29     | Expr . MUL Expr
   30     | Expr . DIV Expr
   31     | Expr . MOD Expr

    PLUS   shift, and go to state 39
    MINUS  shift, and go to state 40
    MUL    shift, and go to state 41
    DIV    shift, and go to state 42
    MOD    shift, and go to state 43
    LT     shift, and go to state 46
    GT     shift, and go to state 47
    LEQ    shift, and go to state 48
    GEQ    shift, and go to state 49

    $default  reduce using rule 21 (Expr)


state 64

   19 Expr: Expr . OR Expr
   20     | Expr . AND Expr
   21     | Expr . EQ Expr
   22     | Expr . NEQ Expr
   22     | Expr NEQ Expr .
   23     | Expr . LT Expr
   24     | Expr . GT Expr
   25     | Expr . LEQ Expr
   26     | Expr . GEQ Expr
   27     | Expr . PLUS Expr
   28     | Expr . MINUS Expr
   29     | Expr . MUL Expr
   30     | Expr . DIV Expr
   31     | Expr . MOD Expr

    PLUS   shift, and go to state 39
    MINUS  shift, and go to state 40
    MUL    shift, and go to state 41
    DIV    shift, and go to state 42
    MOD    shift, and go to state 43
    LT     shift, and go to state 46
    GT     shift, and go to state 47
    LEQ    shift, and go to state 48
    GEQ    shift, and go to state 49

    $default  reduce using rule 22 (Expr)


state 65

   19 Expr: Expr . OR Expr
   20     | Expr . AND Expr
   21     | Expr . EQ Expr
   22     | Expr . NEQ Expr
   23     | Expr . LT Expr
   23     | Expr LT Expr .
   24     | Expr . GT Expr
   25     | Expr . LEQ Expr
   26     | Expr . GEQ Expr
   27     | Expr . PLUS Expr
   28     | Expr . MINUS Expr
   29     | Expr . MUL Expr
   30     | Expr . DIV Expr
   31     | Expr . MOD Expr

    PLUS   shift, and go to state 39
    MINUS  shift, and go to state 40
    MUL    shift, and go to state 41
    DIV    shift, and go to state 42
    MOD    shift, and go to state 43

    $default  reduce using rule 23 (Expr)


state 66

   19 Expr: Expr . OR Expr
   20     | Expr . AND Expr
   21     | Expr . EQ Expr
   22     | Expr . NEQ Expr
   23     | Expr . LT Expr
   24     | Expr . GT Expr
   24     | Expr GT Expr .
   25     | Expr . LEQ Expr
   26     | Expr . GEQ Expr
   27     | Expr . PLUS Expr
   28     | Expr . MINUS Expr
   29     | Expr . MUL Expr
   30     | Expr . DIV Expr
   31     | Expr . MOD Expr

    PLUS   shift, and go to state 39
    MINUS  shift, and go to state 40
    MUL    shift, and go to state 41
    DIV    shift, and go to state 42
    MOD    shift, and go to state 43

    $default  reduce using rule 24 (Expr)


state 67

   19 Expr: Expr . OR Expr
   20     | Expr . AND Expr
   21     | Expr . EQ Expr
   22     | Expr . NEQ Expr
   23     | Expr . LT Expr
   24     | Expr . GT Expr
   25     | Expr . LEQ Expr
   25     | Expr LEQ Expr .
   26     | Expr . GEQ Expr
   27     | Expr . PLUS Expr
   28     | Expr . MINUS Expr
   29     | Expr . MUL Expr
   30     | Expr . DIV Expr
   31     | Expr . MOD Expr

    PLUS   shift, and go to state 39
    MINUS  shift, and go to state 40
    MUL    shift, and go to state 41
    DIV    shift, and go to state 42
    MOD    shift, and go to state 43

    $default  reduce using rule 25 (Expr)


state 68

   19 Expr: Expr . OR Expr
   20     | Expr . AND Expr
   21     | Expr . EQ Expr
   22     | Expr . NEQ Expr
   23     | Expr . LT Expr
   24     | Expr . GT Expr
   25     | Expr . LEQ Expr
   26     | Expr . GEQ Expr
   26     | Expr GEQ Expr .
   27     | Expr . PLUS Expr
   28     | Expr . MINUS Expr
   29     | Expr . MUL Expr
   30     | Expr . DIV Expr
   31     | Expr . MOD Expr

    PLUS   shift, and go to state 39
    MINUS  shift, and go to state 40
    MUL    shift, and go to state 41
    DIV    shift, and go to state 42
    MOD    shift, and go to state 43

    $default  reduce using rule 26 (Expr)


state 69

   19 Expr: Expr . OR Expr
   20     | Expr . AND Expr
   20     | Expr AND Expr .
   21     | Expr . EQ Expr
   22     | Expr . NEQ Expr
   23     | Expr . LT Expr
   24     | Expr . GT Expr
   25     | Expr . LEQ Expr
   26     | Expr . GEQ Expr
   27     | Expr . PLUS Expr
   28     | Expr . MINUS Expr
   29     | Expr . MUL Expr
   30     | Expr . DIV Expr
   31     | Expr . MOD Expr

    PLUS   shift, and go to state 39
    MINUS  shift, and go to state 40
    MUL    shift, and go to state 41
    DIV    shift, and go to state 42
    MOD    shift, and go to state 43
    EQ     shift, and go to state 44
    NEQ    shift, and go to state 45
    LT     shift, and go to state 46
    GT     shift, and go to state 47
    LEQ    shift, and go to state 48
    GEQ    shift, and go to state 49

    $default  reduce using rule 20 (Expr)


state 70

   19 Expr: Expr . OR Expr
   19     | Expr OR Expr .
   20     | Expr . AND Expr
   21     | Expr . EQ Expr
   22     | Expr . NEQ Expr
   23     | Expr . LT Expr
   24     | Expr . GT Expr
   25     | Expr . LEQ Expr
   26     | Expr . GEQ Expr
   27     | Expr . PLUS Expr
   28     | Expr . MINUS Expr
   29     | Expr . MUL Expr
   30     | Expr . DIV Expr
   31     | Expr . MOD Expr

    PLUS   shift, and go to state 39
    MINUS  shift, and go to state 40
    MUL    shift, and go to state 41
    DIV    shift, and go to state 42
    MOD    shift, and go to state 43
    EQ     shift, and go to state 44
    NEQ    shift, and go to state 45
    LT     shift, and go to state 46
    GT     shift, and go to state 47
    LEQ    shift, and go to state 48
    GEQ    shift, and go to state 49
    AND    shift, and go to state 50

    $default  reduce using rule 19 (Expr)


state 71

   16 IfStmt: IF LP Expr RP Blk .
   17       | IF LP Expr RP Blk . ELSE Blk

    ELSE  shift, and go to state 75

    $default  reduce using rule 16 (IfStmt)


state 72

   18 WhlStmt: WHILE LP Expr RP Blk .

    $default  reduce using rule 18 (WhlStmt)


state 73

   15 PrntStmt: PRINT LP ID RP SEMI .

    $default  reduce using rule 15 (PrntStmt)


state 74

   32 Expr: NOT LP Expr RP .

    $default  reduce using rule 32 (Expr)


state 75

   17 IfStmt: IF LP Expr RP Blk ELSE . Blk

    LC  shift, and go to state 7

    Blk  go to state 76


state 76

   17 IfStmt: IF LP Expr RP Blk ELSE Blk .

    $default  reduce using rule 17 (IfStmt)
